[tool.poetry]
name = "scheduling-simulator"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
Flask-DebugToolbar = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
